[package]
name = "gate-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["server"]
otlp = ["gate-core/tracing-otlp"]
server = [
    "dep:anyhow",
    "dep:async-trait",
    "dep:axum",
    "dep:base64",
    "dep:bytes",
    "dep:chrono",
    "dep:futures",
    "dep:gate-core",
    "dep:getrandom",
    "dep:http",
    "dep:hyper",
    "dep:hyper-util",
    "dep:jsonwebtoken",
    "dep:rand",
    "dep:reqwest",
    "dep:sha2",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:utoipa",
    "dep:utoipa-axum",
    "dep:utoipa-scalar",
    "dep:uuid",
    "dep:webauthn-rs",
    "dep:webauthn-rs-proto",
]
client = ["dep:reqwest", "dep:gate-core"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper-util = { workspace = true, features = ["server", "tokio"], optional = true }
jsonwebtoken = { version = "9.3", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
webauthn-rs = { version = "0.5", optional = true }
webauthn-rs-proto = { version = "0.5", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"], optional = true }
hyper-util = { workspace = true, features = ["server"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json"], optional = true }

[dependencies]
anyhow = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
gate-core = { workspace = true, features = ["tracing"], optional = true }
http = { workspace = true, optional = true }
opentelemetry = { version = "0.30", default-features = false, features = ["trace"] }
hyper = { workspace = true, optional = true }
rand = { version = "0.8", optional = true }
serde.workspace = true
serde_json.workspace = true
sha2 = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tower = { workspace = true, features = ["util"], optional = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
utoipa-axum = { workspace = true, optional = true }
utoipa-scalar = { workspace = true, optional = true }
uuid = { version = "1.10", features = ["v4", "serde", "js"], optional = true }

[dev-dependencies]
gate-core = { workspace = true, features = ["tests"] }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
wiremock = { workspace = true }
