[package]
name = "hellas-gate-p2p"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
iroh.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json = "1.0"
anyhow.workspace = true
thiserror.workspace = true

# Will add hellas-gate-core once we define message types
# hellas-gate-core = { path = "../core" }

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace", "color"] }

[lints]
workspace = true
