[package]
name = "gate-p2p"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iroh.workspace = true
tokio.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tracing.workspace = true
