[package]
name = "hellas-gate-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Protobuf support
prost.workspace = true
thiserror.workspace = true

# JSON serialization for conversions
serde.workspace = true
serde_json.workspace = true

# Tonic for service trait generation (just traits, not transport)
tonic = "0.13"

# Core types for conversions
hellas-gate-core = { workspace = true }

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.13"

[lints]
workspace = true