[package]
name = "hellas-gate-relay"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Workspace dependencies
iroh.workspace = true
tokio = { workspace = true, features = ["net", "rt-multi-thread", "signal"] }
tokio-util.workspace = true
futures.workspace = true
tracing.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true
hex.workspace = true

# Relay-specific dependencies
# TLS and networking
rustls = "0.23"
tokio-rustls = "0.26"
webpki-roots = "0.26"

# HTTP and DNS
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
trust-dns-resolver = "0.23"

# ACME/Let's Encrypt (Pure Rust implementation)
rustls-acme = "0.10"

# Parsing and serialization
bytes = "1.0"
bincode = "1.3"
url = "2.5"

# Local crates
hellas-gate-core = { path = "../core" }
hellas-gate-p2p = { path = "../p2p" }

# Library only - no binary target

[dev-dependencies]
tempfile = "3.0"
