[package]
name = "hellas-gate-relay"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Workspace dependencies
iroh.workspace = true
tokio = { workspace = true, features = ["net", "rt-multi-thread", "signal"] }
tokio-util.workspace = true
futures.workspace = true
tracing.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true
hex.workspace = true

# RPC framework dependencies  
tonic = { workspace = true }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Relay-specific dependencies
# TLS and networking
rustls = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }

# HTTP and DNS
reqwest = { workspace = true }
trust-dns-resolver = "0.23"

# Parsing and serialization
bytes = { workspace = true }
url = { workspace = true }

# Local crates
hellas-gate-core = { workspace = true }
hellas-gate-proto = { workspace = true }

# P2P networking via tonic-iroh
tonic-iroh-transport = { workspace = true }
n0-watcher = "*"

# RPC dependencies
dashmap.workspace = true

# Library only - no binary target

[dev-dependencies]
