[package]
name = "gate-sqlx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["postgres", "sqlite"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
gate-core.workspace = true
serde_json.workspace = true

sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "macros", "migrate", "chrono", "uuid"] }
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
gate-core = { workspace = true, features = ["tests"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
