[package]
name = "gate-tlsforward"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "gate-tlsforward"
required-features = ["server"]

[features]
default = ["client", "server"]
client = [
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:tokio-rustls",
    "dep:gate-http",
    "dep:rcgen",
    "instant-acme/ring",
    "instant-acme/hyper-rustls",
]
server = [
    "client",
    "dep:tokio-rustls",
    "dep:x509-parser",
    "dep:config",
    "dep:clap",
    "dep:tracing-subscriber",
    "dep:cloudflare",
    "dep:uuid",
    "dep:axum",
    "dep:tower",
    "dep:trust-dns-resolver",
]

[dependencies]
# Error handling and logging
anyhow = { workspace = true }
async-trait = { workspace = true }

# HTTP server dependencies
axum = { workspace = true, optional = true }

# Core dependencies (needed for protocol)
bytes = { workspace = true }
chrono = { workspace = true }

# CLI parsing
clap = { workspace = true, optional = true }

# DNS management
cloudflare = { version = "0.14", optional = true }

# Configuration
config = { workspace = true, optional = true }
dashmap = "6.0"
deadpool = "0.12"
directories = "5"
futures = { workspace = true }

# gate-dynconfig removed - using standard config crate instead

# HTTP server dependency
gate-http = { path = "../http", optional = true }

# Core dependency with tracing
gate-core = { workspace = true, features = ["tracing", "tracing-otlp", "tracing-prometheus"] }

# P2P dependency
gate-p2p = { path = "../p2p" }

# Utilities
hex = { workspace = true }
http = { workspace = true }
http-body-util = { version = "0.1", optional = true }
hyper = { workspace = true }
hyper-util = { version = "0.1", features = ["server", "client", "tokio"], optional = true }

# Let's Encrypt support
instant-acme = { git = "https://github.com/djc/instant-acme.git", default-features = false, optional = true }

# P2P networking
iroh = { workspace = true }

# Utilities
n0-future = "0.1"

# Certificate generation
rcgen = { version = "0.14", optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# DNS resolution
trust-dns-resolver = { version = "0.23", optional = true }

# Async runtime
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-rustls = { version = "0.26", default-features = false, optional = true }
tower = { version = "0.5", optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
x509-parser = { version = "0.16", optional = true }

[dev-dependencies]
gate-daemon = { path = "../daemon" }
gate-p2p = { path = "../p2p" }
gate-tlsforward = { path = ".", features = ["server"] }
rand = "0.8"
tempfile = "3"
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
