[package]
name = "trunk-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "main.rs"

[dependencies]
gate-chat-ui = { path = "../.." }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "DomTokenList", "HtmlSelectElement", "Request", "RequestInit", "Response"] }
yew = { version = "0.21", features = ["csr"] }
console_error_panic_hook = "0.1"
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
gloo-net = "0.4"

[workspace]