[package]
name = "trunk-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "main.rs"

[dependencies]
gate-chat-ui = { path = "../.." }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["Window", "Document", "Element", "HtmlElement", "DomTokenList", "HtmlSelectElement", "Request", "RequestInit", "Response"] }
yew = { workspace = true, features = ["csr"] }
console_error_panic_hook = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen-futures = { workspace = true }
gloo-net = { workspace = true }

